Two components created with bootstrap

--- a/angular-demo/src/app/app.component.html
+++ b/angular-demo/src/app/app.component.html
@@ -1,4 +1,12 @@
 <div>
   <app-myfirstcomponent></app-myfirstcomponent>
+</div>
+<div>
   <app-mysecondcomponent></app-mysecondcomponent>
+</div>
+<div>
+  <app-bootcomponent1></app-bootcomponent1>
+</div>
+<div>
+  <app-bootcomponent2></app-bootcomponent2>
 </div>
