--- a/angular-demo/src/app/myfirstcomponent/myfirstcomponent.component.css
+++ b/angular-demo/src/app/myfirstcomponent/myfirstcomponent.component.css
@@ -1,5 +1,8 @@
 p {
   border: solid black 2px;
   background: green;
-  padding:10px;
+  padding: 10px;
+  width: 200px;
+  margin: auto;
+  border-radius: 30%;
 }
