--- a/data-binding/src/app/assignment2/assignment2.component.html
+++ b/data-binding/src/app/assignment2/assignment2.component.html
@@ -1,5 +1,5 @@
 <label for="yourword">Word:</label>
 <input type="text" id="yourword" [(ngModel)]="yourWord">
 <button (click)="onAddClick()">Add Word</button>
-<button (click)="onShowHideClick()">Show Sentence</button>
+<button (click)="onShowHideClick()">{{showSentence}}</button>
 <p>{{yourShow}}</p>
