--- a/data-binding/src/app/assignment3/assignment3.component.html
+++ b/data-binding/src/app/assignment3/assignment3.component.html
@@ -1,1 +1,40 @@
-<p>assignment3 works!</p>
+<div class="row">
+  <div class="col">
+      <div class="form-group row">
+        <label for="title" class="col-sm-2 col-form-label">Title</label>
+        <div class="col-sm-10">
+          <input type="text" id="title" [(ngModel)]="givenTitle" class="form-control">
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="author" class="col-sm-2 col-form-label">Author</label>
+        <div class="col-sm-10">
+          <input type="text" id="author" [(ngModel)]="givenAuthor" class="form-control">
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="genre" class="col-sm-2 col-form-label">Genre</label>
+        <div class="col-sm-10">
+          <input type="text" id="genre" [(ngModel)]="givenGenre" class="form-control" (input)="onTextEntry($event)">
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="image" class="col-sm-2 col-form-label">Img</label>
+        <div class="col-sm-10">
+          <input type="text" id="image" [(ngModel)]="givenImage" class="form-control">
+        </div>
+      </div>
+  </div>
+  <div class="col">
+    <div class="row">
+      <div class="col">
+        {{givenImage}}
+      </div>
+      <div class="col">
+        <h1>{{givenTitle}}</h1>
+        <p>Writen by {{givenAuthor}}</p>
+        <div id="genre-output">{{givenGenre}}</div>
+      </div>
+    </div>
+  </div>
+</div>
