--- a/data-binding/src/app/assignment3/assignment3.component.html
+++ b/data-binding/src/app/assignment3/assignment3.component.html
@@ -3,7 +3,7 @@
       <div class="form-group row">
         <label for="title" class="col-sm-2 col-form-label">Title</label>
         <div class="col-sm-10">
-          <input type="text" id="title" [(ngModel)]="givenTitle" class="form-control">
+          <input type="text" id="title" [(ngModel)]="givenTitle" class="form-control" (input)="onTitleEntry($event)">
         </div>
       </div>
       <div class="form-group row">
@@ -15,7 +15,7 @@
       <div class="form-group row">
         <label for="genre" class="col-sm-2 col-form-label">Genre</label>
         <div class="col-sm-10">
-          <input type="text" id="genre" [(ngModel)]="givenGenre" class="form-control" (input)="onTextEntry($event)">
+          <input type="text" id="genre" [(ngModel)]="givenGenre" class="form-control">
         </div>
       </div>
       <div class="form-group row">
@@ -28,12 +28,12 @@
   <div class="col">
     <div class="row">
       <div class="col">
-        {{givenImage}}
+        <img src={{givenImage}} width=500 height=600 alt="book cover image">
       </div>
       <div class="col">
         <h1>{{givenTitle}}</h1>
         <p>Writen by {{givenAuthor}}</p>
-        <div id="genre-output">{{givenGenre}}</div>
+        <div [class.scifi]="isSciFi" id="genre-output">{{givenGenre}}</div>
       </div>
     </div>
   </div>
