--- a/input-output/src/app/display-user/display-user.component.html
+++ b/input-output/src/app/display-user/display-user.component.html
@@ -1,1 +1,5 @@
-<p>display-user works!</p>
+<div class="container">
+  <!-- <input type="text" [ngModel]="displayUser.getUserInfo()"> -->
+  <p>username: {{displayUser.username}}, password: {{displayUser.password}} </p>
+  <button type="button" class="btn-close kleiner" (click)="onDeleteUser()"></button>
+</div>
