--- a/input-output/src/app/create-user/create-user.component.html
+++ b/input-output/src/app/create-user/create-user.component.html
@@ -3,14 +3,20 @@
     <label for="usern" class="control-label col-sm-2">username: </label>
     <div class="col-sm-10">
 <!--Why it is required name attribute below?-->
-      <input [(ngModel)]="givenUser.username" name="username" type="username" class="form-control" id="user" placeholder="Enter username">
+      <!-- For assignment 2 -->
+      <input name="username" type="username" class="form-control" id="user" placeholder="Enter username" #NewUserName>
+      <!-- For assignment 1 -->
+      <!-- <input [(ngModel)]="givenUser.username" name="username" type="username" class="form-control" id="user" placeholder="Enter username"> -->
     </div>
   </div>
   <div class="form-group">
     <label for="pwd" class="control-label col-sm-2">Password: </label>
     <div class="col-sm-10">
 <!--Why it is required name attribute below?-->
-      <input [(ngModel)]="givenUser.password" name="password" type="password" class="form-control" id="pwd" placeholder="Enter password">
+      <!-- For assignment 2 -->
+      <input name="password" type="password" class="form-control" id="pwd" placeholder="Enter password" #NewPassword/>
+      <!-- For assignment 1 -->
+      <!-- <input [(ngModel)]="givenUser.password" name="password" type="password" class="form-control" id="pwd" placeholder="Enter password"> -->
     </div>
   </div>
 </form>
