--- a/input-output/src/app/app.component.html
+++ b/input-output/src/app/app.component.html
@@ -5,4 +5,9 @@
   [displayUser] = "listOfUsers[i]" [displayUserList] = "listOfUsers"
 >
 </app-display-user>
+<app-assignment4
+  *ngFor= "let posicion of assignment4List; index asi;"
+  [body]= "posicion"
+>
+</app-assignment4>
 
