--- a/input-output/src/app/assignment4/assignment4.component.html
+++ b/input-output/src/app/assignment4/assignment4.component.html
@@ -1,4 +1,5 @@
 <div class="card">
-  <div class="card-header">{{header}}</div>
+  <div class="card-header" #cardHeaderReference>{{header}}</div>
+  <!-- <div class="card-header" #cardHeaderReference>{{header}}</div> -->
   <div class="card-body">{{body}}</div>
 </div>
