lab9 services finished

--- a/services/src/app/app.component.html
+++ b/services/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-location></app-location>
+<h1>Assignment 2</h1>
 <div class="container">
   <app-display-books class="inline"></app-display-books>
   <app-create-book class="inline"></app-create-book>
