--- a/routers/src/app/app.component.html
+++ b/routers/src/app/app.component.html
@@ -2,16 +2,17 @@
   <div class="row">
     <div class="col-md-12">
       <ul class="nav nav-tabs">
-        <li class="nav-item"><a class="nav-link">Home</a></li>
-        <li class="nav-item"><a class="nav-link">Books</a></li>
+        <li class="nav-item"><a class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" routerLink="/">Home</a></li>
+        <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="/books">Books</a></li>
       </ul>
     </div>
   </div>
   <div class="row">
     <div class="col-md-12">
-      <app-home></app-home>
+      <router-outlet></router-outlet>
+      <!-- <app-home></app-home>
       <hr/>
-      <app-books></app-books>
+      <app-books></app-books> -->
     </div>
   </div>
 </div>
