router lab 90% done

--- a/routers/src/app/books/book/book.component.html
+++ b/routers/src/app/books/book/book.component.html
@@ -9,5 +9,6 @@
   <p>{{book.summary|summary:100}}</p>
   <p [innerHTML]="book.price|euro"></p>
   <button type="submit" class="btn btn-light" (click)="onNextBook()">Next book</button>
+  <button type="submit" class="btn btn-light" (click)="onEditBook()">Edit book</button>
 </div>
 
