--- a/routers/src/app/books/books.component.html
+++ b/routers/src/app/books/books.component.html
@@ -10,11 +10,12 @@
     </div>
   </div>
   <div class="col-xs-12 col-sm-4">
-    <!-- <router-outlet></router-outlet> -->
-    <app-book></app-book>
-    <hr />
-    <app-edit-book></app-edit-book>
-    <hr />
-    <app-create-book></app-create-book>
+    <router-outlet></router-outlet>
+    <!-- <app-book></app-book> -->
+    <!-- <hr /> -->
+    <!-- <app-edit-book></app-edit-book> -->
+    <!-- <hr /> -->
+    <!-- <app-create-book></app-create-book> -->
+
 </div>
 
