interval service every two seconds

--- a/observables-promises/src/app/assignment1/assignment1.component.html
+++ b/observables-promises/src/app/assignment1/assignment1.component.html
@@ -1,3 +1,4 @@
+<h1>Assignment1: Promises</h1>
 <div *ngFor="let user of users">
     <p *ngIf="isPromiseValid()">{{user.name}}, {{user.age}}</p>
 </div>
